# mukhostho_db

./: agile.md  conanfile.txt  file-reset.sh  ins.txt  srs.md
src/: CMakeLists.txt  config.h  main.cpp
src/core/: row.h  schema.cpp  schema.h  table.cpp  table.h
src/data/schemas/: security_status.schema.json
src/util/: logger.cpp  red_json_parser.cpp
